2010-09-07  Robert Larice
 * src/xspice/ipc/ipcstdio.c :
    convert K&R function definitions to ansi style

2010-09-07  Robert Larice
 * src/frontend/inpcom.c ,
 * src/frontend/plotting/x11.c ,
 * src/frontend/resource.c ,
 * src/frontend/subckt.c ,
 * src/include/hash.h ,
 * src/main.c ,
 * src/misc/util.c ,
 * src/ngproc2mod.c ,
 * src/spicelib/analysis/cktterr.c ,
 * src/spicelib/analysis/dctran.c ,
 * src/spicelib/devices/ltra/ltratemp.c ,
 * src/spicelib/devices/ltra/ltratrun.c ,
 * src/winmain.c ,
 * src/xspice/evt/evtbackup.c ,
 * src/xspice/ipc/ipcaegis.c ,
 * src/xspice/mif/mifgetvalue.c ,
 * src/xspice/mif/miftrunc.c :
    use for(;;) instead of while(1) to muffle some visual-C warnings

2010-09-07  Robert Larice
 * examples/tclspice/tcl-testbench2/example.cir ,
 * examples/xspice/xspice_c2.cir ,
 * examples/xspice/xspice_c3.cir ,
 * src/frontend/help/ChangeLog ,
 * src/spicelib/devices/adms/mextram/admsva/COPYRIGHT_NOTICE ,
 * visualc/how-to-ngspice-vstudio.txt ,
 * xgraph/.cvsignore :
    whitespace cleanup, add missing trailing newlines

2010-09-07  Robert Larice
 * contrib/vbic/sgp2vbic ,
 * contrib/vbic/vbic2sgp ,
 * src/spicelib/devices/mos9/mos9temp.c ,
 * src/xspice/examples/d_to_real/Makefile ,
 * src/xspice/examples/d_to_real/cfunc.mod ,
 * src/xspice/examples/d_to_real/ifspec.ifs ,
 * src/xspice/examples/nco/Makefile ,
 * src/xspice/examples/nco/ifspec.ifs ,
 * src/xspice/examples/print_param_types/Makefile ,
 * src/xspice/examples/print_param_types/cfunc.mod ,
 * src/xspice/examples/print_param_types/ifspec.ifs ,
 * src/xspice/examples/real_delay/Makefile ,
 * src/xspice/examples/real_delay/ifspec.ifs ,
 * src/xspice/examples/real_gain/Makefile ,
 * src/xspice/examples/real_gain/cfunc.mod ,
 * src/xspice/examples/real_gain/ifspec.ifs ,
 * src/xspice/examples/real_to_v/Makefile ,
 * src/xspice/examples/real_to_v/ifspec.ifs :
    whitespace cleanup, \r\n -> \n

2010-09-07 Holger Vogt
 * vectors.c: add plot [alli | allv | ally]