@@ -21,12 +21,11 @@
 #include <assert.h>   /*   12/1/97 jg  */
  
 /*---------------------------------------------------------------------------*/
-Ipc_Status_t ipc_transport_initialize_server (server_name, m, p,
-                                              batch_filename)
-     char               *server_name;
-     Ipc_Mode_t         m;
-     Ipc_Protocol_t     p;
-     char               *batch_filename;
+Ipc_Status_t ipc_transport_initialize_server (
+     char               *server_name,
+     Ipc_Mode_t         m,
+     Ipc_Protocol_t     p,
+     char               *batch_filename )
 {
    assert (m == IPC_MODE_INTERACTIVE);
    printf ("INITIALIZE_SERVER\n");
@@ -34,10 +33,10 @@ Ipc_Status_t ipc_transport_initialize_server (server_name, m, p,
 }
 
 /*---------------------------------------------------------------------------*/
-Ipc_Status_t ipc_transport_get_line (str, len, wait)
-     char               *str;
-     int                *len;
-     Ipc_Wait_t         wait;
+Ipc_Status_t ipc_transport_get_line (
+     char               *str,
+     int                *len,
+     Ipc_Wait_t         wait )
 {
    printf ("GET_LINE\n");
    gets (str);
@@ -46,9 +45,9 @@ Ipc_Status_t ipc_transport_get_line (str, len, wait)
 }
 
 /*---------------------------------------------------------------------------*/
-Ipc_Status_t ipc_transport_send_line (str, len)
-     char *str;
-     int len;
+Ipc_Status_t ipc_transport_send_line (
+     char *str,
+     int len )
 {
    int i;
 
